[package]
name = "wasm_sync"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DouglasDwyer/wasm_sync"
readme = "README.md"
description = """
Synchronization primitives for both web and native.
"""

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3.24", features = [ "Window" ] }